; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_304.c_build_request.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_304.c_build_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@request3 = common dso_local global i8* null, align 8
@offset1 = common dso_local global i32 0, align 4
@offset2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @build_request(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = call i64 @malloc(i32 1024)
  %6 = inttoptr i64 %5 to i8*
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i8*, i8** @request3, align 8
  %10 = load i32, i32* @offset1, align 4
  %11 = load i32, i32* @offset2, align 4
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @sprintf(i8* %8, i8* %9, i32 %10, i32 %11, i8* %12)
  %14 = load i8*, i8** %3, align 8
  ret i8* %14
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
